# crude_watch

./: .gitignore  CrudeWatch.spec  Dockerfile  README.md  pyproject.toml  requirements.txt  run_app.py
.github/: .build-windows.yml
app/: main.py
app/.streamlit/: config.toml
app/chapters/: __init__.py  base.py  bollinger.py  score.py  seasonality.py  technical.py
app/core/: __init__.py  auth.py  data.py
app/screens/: __init__.py  contract_exploration.py  spread_analytics.py
app/theme/: __init__.py  palette.py
data/processed/: brent_wti.parquet  cracks.parquet  flies.parquet  outrights.parquet  quarterly.parquet  semestral.parquet  yearly.parquet
deploy/: crudewatch.service  setup_oracle.sh  update.sh
docs/: data_dictionary.md
notebooks/: create_clean_dataset.ipynb
scripts/: prebuild_cache.py
src/crudewatch/: __init__.py
src/crudewatch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/crudewatch/analytics/: __init__.py  data_layer.py  regime.py  scoring.py  seasonality.py  structures.py
src/crudewatch/analytics/indicators/: __init__.py  momentum.py  panel.py  statistical.py  trend.py  volatility.py
src/crudewatch/data_preparation/: __init__.py  brent.py  calendars.py  cracks.py  helpers.py  outrights.py  pipeline.py  spreads.py
src/crudewatch/infra/: __init__.py  constants.py  io.py
src/crudewatch/plots/: __init__.py  style.py
tests/: test_indicators.py  test_integration.py  test_regime.py  test_scoring.py  test_seasonality.py
