[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "crudewatch"
version = "0.1.0"
description = "WTI crude futures dataset preparation: outrights, calendar spreads, cracks, synthetic spreads & flies."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
plots = ["plotly>=5.0"]
parquet = ["pyarrow>=12.0"]
stats = ["scipy>=1.10", "statsmodels>=0.14"]
    app = ["streamlit>=1.40", "plotly>=5.0", "pyarrow>=12.0", "scipy>=1.10", "statsmodels>=0.14"]
build = ["pyinstaller>=6.6"]

[dependency-groups]
dev = [
    "ipykernel>=6.29",
    "nbconvert>=7.16",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
