[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "crudewatch"
version = "0.1.0"
description = "WTI crude futures dataset preparation: outrights, calendar spreads, cracks, synthetic spreads & flies."
requires-python = ">=3.10"
# Full runtime stack for the Streamlit app. Kept in [project].dependencies
# (not an optional extra) so Streamlit Community Cloud, which installs the
# project via `uv sync` from pyproject.toml, pulls everything in.
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "streamlit>=1.42",
    "plotly>=5.0",
    "pyarrow>=12.0",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "authlib>=1.3.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Granular extras (subsets of the runtime stack) for library-only installs.
plots = ["plotly>=5.0"]
parquet = ["pyarrow>=12.0"]
stats = ["scipy>=1.10", "statsmodels>=0.14"]
app = ["streamlit>=1.42", "plotly>=5.0", "pyarrow>=12.0", "scipy>=1.10", "statsmodels>=0.14", "authlib>=1.3.2", "httpx>=0.27"]
build = ["pyinstaller>=6.6"]

[dependency-groups]
dev = [
    "ipykernel>=6.29",
    "nbconvert>=7.16",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
